fix: remove duplicate CorsConfig, fix wildcard CORS with credentials